--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://영진민교결혼합니다.site",
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -11,14 +13,15 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "dot-env": "^0.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "esm": "^3.2.25",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.10.0",
-    "node-windows": "^1.0.0-beta.8",
-    "sequelize": "^6.37.3",
+    "mysql2": "^3.2.0",
+    "sequelize": "^6.29.3",
     "sha256": "^0.2.0",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.19"
   }
 }
