--- a/ui/package.json
+++ b/ui/package.json
@@ -1,11 +1,13 @@
 {
+	"homepage": "https://영진민교결혼합니다.site",
 	"name": "ui",
 	"version": "0.0.1",
 	"scripts": {
 		"start": "npm run dev -- --host",
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"gh-pages": "npm run build && npx gh-pages -d build"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -18,5 +20,9 @@
 	},
 	"type": "module",
 	"dependencies": {
-	}
+		"axios": "^1.7.7",
+		"clipboard": "^2.0.11",
+		"gh-pages": "^6.1.1"
+	},
+	"proxy": "http://192.168.45.70:5000"
 }
