--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.4",
 		"axios": "^1.7.7",
 		"clipboard": "^2.0.11",
 		"gh-pages": "^6.1.1"
