--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"gh-pages": "npm run build && npx gh-pages -d build"
+		"deploy":"npm run build && git add dist -f && git commit -m'hosting' && git subtree push --prefix dist origin gh-pages"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
